--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 }
 
 body {
+    font-family: "Roboto", Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -75,7 +76,7 @@ body {
     margin-top: 10px;
 
     text-align: right;
-    font-size: 30px;
+    font-size: 38px;
     font-weight: bold;
 }
 
